--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pie Recipe</title>
-    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./style.css">
   </head>
   
   <body>
@@ -43,12 +43,16 @@
 
     <section id="directions">
       <h2> Directions </h2>
-      <article> Preheat oven to 425 degrees F (220 degrees
-      C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring
-      to a boil. Reduce temperature and let simmer. Place the bottom crust in your pan. Fill with apples, mounded
-      slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
-      that it does not run off. Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
-      degrees C). Continue baking for 35 to 45 minutes, until apples are soft. </article> 
-    </section>
+      <ol>
+        <li> Preheat oven to 425 degrees F (220 degrees
+          C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring
+          to a boil. Reduce temperature and let simmer. </li>
+        <li> Place the bottom crust in your pan. Fill with apples, mounded
+          slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
+          that it does not run off. </li>
+        <li> Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
+          degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</li>
+      </ol>
+
   </body>
 </html>
